Update repository layer