@@ -1,8 +1,6 @@
 package com.moviesphere.repository;
 
-import com.moviesphere.dto.response.IstoricResponse;
-import com.moviesphere.dto.response.LoginResponse;
-import com.moviesphere.dto.response.ProfilCategorieResponse;
+import com.moviesphere.dto.response.*;
 import com.moviesphere.exception.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -32,10 +30,9 @@ public class ClientRepository {
         }
     }
 
-    public LoginResponse autentificareParola(String email, String parolaRaw, PasswordEncoder passwordEncoder) {
-        String sql = "SELECT id, nume, prenume, email, oras, parola_hash, activ FROM clienti " +
-                "WHERE email = ?";
-
+    public LoginResponse autentificareParola(String email, String parolaRaw,
+                                             PasswordEncoder passwordEncoder) {
+        String sql = "SELECT id, nume, prenume, email, oras, parola_hash, activ FROM clienti WHERE email = ?";
         try {
             List<Map<String, Object>> rezultat = jdbc.queryForList(sql, email);
 
@@ -44,21 +41,17 @@ public class ClientRepository {
                         "Nu exista un cont pentru adresa " + email);
             }
 
-            Map<String, Object> client = rezultat.get(0);
-
+            Map<String, Object> client = rezultat.getFirst();
             Boolean activ = (Boolean) client.get("activ");
             if (activ == null || !activ) {
                 throw new AuthenticationException("CONT_INACTIV",
-                        "Contul asociat adresei " + email + " este inactiv."
-                );
+                        "Contul asociat adresei " + email + " este inactiv.");
             }
 
             String hashDinBD = (String) client.get("parola_hash");
-
             if (!passwordEncoder.matches(parolaRaw, hashDinBD)) {
                 throw new AuthenticationException("PAROLA_INCORECTA",
-                        "Parola introdusa este incorecta."
-                );
+                        "Parola introdusa este incorecta.");
             }
 
             LoginResponse response = new LoginResponse();
@@ -67,7 +60,6 @@ public class ClientRepository {
             response.setPrenume((String) client.get("prenume"));
             response.setEmail((String) client.get("email"));
             response.setOras((String) client.get("oras"));
-
             return response;
 
         } catch (DataAccessException ex) {
@@ -77,7 +69,6 @@ public class ClientRepository {
 
     public List<ProfilCategorieResponse> profilClient(Integer idClient) {
         String sql = "SELECT categorie, numar_vizualizari, rating_mediu, procent FROM fn_profil_client(?)";
-
         try {
             return jdbc.query(sql, (rs, i) -> {
                 ProfilCategorieResponse r = new ProfilCategorieResponse();
@@ -93,9 +84,8 @@ public class ClientRepository {
     }
 
     public List<IstoricResponse> istoricClient(Integer idClient) {
-        String sql = "SELECT id_film, titlu, categorie, data_vizualizare, vot, comentariu, sentiment " +
-                "FROM fn_istoric_client(?)";
-
+        String sql = "SELECT id_film, titlu, categorie, data_vizualizare, vot, " +
+                "comentariu, sentiment FROM fn_istoric_client(?)";
         try {
             return jdbc.query(sql, (rs, i) -> {
                 IstoricResponse r = new IstoricResponse();
@@ -103,8 +93,7 @@ public class ClientRepository {
                 r.setTitlu(rs.getString("titlu"));
                 r.setCategorie(rs.getString("categorie"));
                 r.setDataVizualizare(rs.getTimestamp("data_vizualizare") != null
-                        ? rs.getTimestamp("data_vizualizare").toLocalDateTime()
-                        : null);
+                        ? rs.getTimestamp("data_vizualizare").toLocalDateTime() : null);
                 r.setVot(rs.getObject("vot") != null ? rs.getInt("vot") : null);
                 r.setComentariu(rs.getString("comentariu"));
                 r.setSentiment(rs.getString("sentiment"));
@@ -115,17 +104,54 @@ public class ClientRepository {
         }
     }
 
-    public List<Map<String, Object>> totiClientii() {
-        String sql = "SELECT id, nume, prenume, email, telefon, oras, data_inregistrare, activ " +
-                "FROM clienti ORDER BY data_inregistrare DESC";
+    public List<ActoriFrecventiResponse> actoriFrecventi(Integer idClient, Integer numarMax) {
+        String sql = "SELECT id_actor, nume_scena, nationalitate, numar_aparitii, " +
+                "rating_mediu, tip_rol_frecvent FROM fn_actori_frecventi(?, ?)";
+        try {
+            return jdbc.query(sql, (rs, i) -> {
+                ActoriFrecventiResponse r = new ActoriFrecventiResponse();
+                r.setIdActor(rs.getInt("id_actor"));
+                r.setNumeScena(rs.getString("nume_scena"));
+                r.setNationalitate(rs.getString("nationalitate"));
+                r.setNumarAparitii(rs.getLong("numar_aparitii"));
+                r.setRatingMediu(rs.getBigDecimal("rating_mediu"));
+                r.setTipRolFrecvent(rs.getString("tip_rol_frecvent"));
+                return r;
+            }, idClient, numarMax);
+        } catch (DataAccessException ex) {
+            throw parseException(ex);
+        }
+    }
 
+    public List<ClientSimilarResponse> clientiSimilari(Integer idClient, Integer numarMax) {
+        String sql = "SELECT id_client_similar, nume_complet, oras, scor_similaritate, " +
+                "categorii_comune, actori_comuni, motiv FROM fn_clienti_similari(?, ?)";
+        try {
+            return jdbc.query(sql, (rs, i) -> {
+                ClientSimilarResponse r = new ClientSimilarResponse();
+                r.setIdClientSimilar(rs.getInt("id_client_similar"));
+                r.setNumeComplet(rs.getString("nume_complet"));
+                r.setOras(rs.getString("oras"));
+                r.setScorSimilaritate(rs.getBigDecimal("scor_similaritate"));
+                r.setCategoriiComune(rs.getLong("categorii_comune"));
+                r.setActoriComuni(rs.getLong("actori_comuni"));
+                r.setMotiv(rs.getString("motiv"));
+                return r;
+            }, idClient, numarMax);
+        } catch (DataAccessException ex) {
+            throw parseException(ex);
+        }
+    }
+
+    public List<Map<String, Object>> totiClientii() {
+        String sql = "SELECT id, nume, prenume, email, telefon, oras, data_inregistrare, activ FROM clienti " +
+                "ORDER BY data_inregistrare DESC";
         return jdbc.queryForList(sql);
     }
 
     public void dezactiveazaClient(Integer id) {
         String sql = "UPDATE clienti SET activ = FALSE WHERE id = ?";
         int rows = jdbc.update(sql, id);
-
         if (rows == 0) {
             throw new ClientNotFoundException("Clientul cu id " + id + " nu exista.");
         }
@@ -133,46 +159,24 @@ public class ClientRepository {
 
     private RuntimeException parseException(DataAccessException ex) {
         String msg = ex.getMostSpecificCause().getMessage();
-        log.error("Eroare BD: {}", msg);
-
-        if (msg == null) {
+        log.error("Eroare BD client: {}", msg);
+        if (msg == null)
             return new MovieSphereException("EROARE_NECUNOSCUTA", "Eroare necunoscuta.");
-        }
-
-        if (msg.contains("EMAIL_EXISTENT")) {
+        if (msg.contains("EMAIL_EXISTENT"))
             return new EmailAlreadyExistsException(extractMessage(msg));
-        }
-
-        if (msg.contains("CLIENT_INEXISTENT")) {
+        if (msg.contains("CLIENT_INEXISTENT"))
             return new ClientNotFoundException(extractMessage(msg));
-        }
-
-        if (msg.contains("FILM_INEXISTENT")) {
+        if (msg.contains("FILM_INEXISTENT"))
             return new FilmNotFoundException(extractMessage(msg));
-        }
-
-        if (msg.contains("VOT_INVALID")) {
+        if (msg.contains("VOT_INVALID"))
             return new InvalidVoteException(extractMessage(msg));
-        }
-
-        if (msg.contains("VIZUALIZARE_LIPSA")) {
+        if (msg.contains("VIZUALIZARE_LIPSA"))
             return new ViewingNotFoundException(extractMessage(msg));
-        }
-
-        if (msg.contains("EMAIL_INEXISTENT") || msg.contains("PAROLA_INCORECTA")) {
-            return new AuthenticationException(extractCode(msg), extractMessage(msg));
-        }
-
         return new MovieSphereException("EROARE_BD", msg);
     }
 
     private String extractMessage(String msg) {
         int idx = msg.indexOf(':');
         return idx >= 0 ? msg.substring(idx + 1).trim() : msg;
-    }
-
-    private String extractCode(String msg) {
-        int idx = msg.indexOf(':');
-        return idx >= 0 ? msg.substring(0, idx).trim() : "EROARE";
     }
 }
